[gd_scene load_steps=29 format=3 uid="uid://pjrq1rdub88u"]

[ext_resource type="Texture2D" uid="uid://bdjbm0gwfgj4k" path="res://Sprites/blue_slime.png" id="1_dbgip"]
[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_ueojc"]
[ext_resource type="PackedScene" uid="uid://dtqjivm2acj5" path="res://Scenes/Objects/slime_attack_1.tscn" id="2_q6k0q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aarli"]
atlas = ExtResource("1_dbgip")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3pw5"]
atlas = ExtResource("1_dbgip")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugf1x"]
atlas = ExtResource("1_dbgip")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqfel"]
atlas = ExtResource("1_dbgip")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_usben"]
atlas = ExtResource("1_dbgip")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xye80"]
atlas = ExtResource("1_dbgip")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieybi"]
atlas = ExtResource("1_dbgip")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuq4w"]
atlas = ExtResource("1_dbgip")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvsal"]
atlas = ExtResource("1_dbgip")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhw3a"]
atlas = ExtResource("1_dbgip")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wfqf"]
atlas = ExtResource("1_dbgip")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n64jd"]
atlas = ExtResource("1_dbgip")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgd6l"]
atlas = ExtResource("1_dbgip")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yqub"]
atlas = ExtResource("1_dbgip")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ylw"]
atlas = ExtResource("1_dbgip")
region = Rect2(160, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bukig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aarli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3pw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugf1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqfel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xye80")
}],
"loop": false,
"name": &"attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuq4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvsal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wfqf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n64jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgd6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yqub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ylw")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3tde6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7)]
}

[sub_resource type="Animation" id="Animation_3yam7"]
resource_name = "attack_1"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7, -6, 8), PackedVector2Array(5, 8, 6, 7, 6, 2, 5, 0, 1, -2, -1, -2, -4, -1, -6, 0, -7, 2, -7, 7, -6, 8), PackedVector2Array(6, 8, 7, 7, 7, 0, 3, 0, 1, -3, -1, -3, -4, 0, -6, 0, -8, 0, -8, 7, -7, 8), PackedVector2Array(5, 8, 6, 7, 6, 1, 5, -1, 3, -2, 0, -3, -2, -3, -6, -1, -7, 0, -7, 7, -6, 8), PackedVector2Array(4, 8, 5, 7, 5, 0, 2, -3, -3, -3, -6, 0, -6, 7, -5, 8), PackedVector2Array(5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7, -6, 8)]
}

[sub_resource type="Animation" id="Animation_ic5jm"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7), PackedVector2Array(-7, 8, 6, 8, 7, 7, 7, 2, 4, -1, -5, -1, -8, 2, -8, 7), PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7), PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 0, 3, -3, -4, -3, -7, 0, -7, 7), PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7)]
}

[sub_resource type="Animation" id="Animation_icirv"]
resource_name = "walk_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(5, 8, 6, 7, 6, 1, 3, -2, -3, -2, -6, 1, -7, 4, -7, 7, -6, 8), PackedVector2Array(6, 8, 7, 7, 7, 2, 4, -1, -3, -1, -6, 2, -7, 4, -8, 5, -8, 7, -7, 8), PackedVector2Array(5, 8, 6, 7, 6, 1, 3, -2, -3, -2, -6, 1, -7, 4, -7, 7, -6, 8), PackedVector2Array(5, 8, 6, 7, 6, 0, 3, -3, -3, -3, -6, 0, -7, 4, -7, 7, -6, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ejlv3"]
_data = {
"RESET": SubResource("Animation_3tde6"),
"attack_1": SubResource("Animation_3yam7"),
"idle": SubResource("Animation_ic5jm"),
"walk_right": SubResource("Animation_icirv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_27xe5"]
radius = 64.0

[sub_resource type="SphereMesh" id="SphereMesh_1k0fj"]
radius = 64.0
height = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q8vt6"]

[sub_resource type="SphereMesh" id="SphereMesh_ejk41"]
radius = 10.0
height = 20.0

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_ueojc")
attack_1 = ExtResource("2_q6k0q")
speed = 75
attackCooldown = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -4)
sprite_frames = SubResource("SpriteFrames_bukig")
animation = &"attack_1"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.5, -4)
polygon = PackedVector2Array(-6, 8, 5, 8, 6, 7, 6, 1, 3, -2, -4, -2, -7, 1, -7, 7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ejlv3")
}

[node name="SightArea" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_27xe5")

[node name="MeshInstance2D" type="MeshInstance2D" parent="SightArea"]
modulate = Color(1, 1, 1, 0.25)
mesh = SubResource("SphereMesh_1k0fj")

[node name="AttackArea" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_q8vt6")

[node name="MeshInstance2D" type="MeshInstance2D" parent="AttackArea"]
modulate = Color(1, 0, 0, 0.25098)
mesh = SubResource("SphereMesh_ejk41")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
